--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -1,3 +1,67 @@
+server:
+  port: 8080
+management:
+  info:
+    git:
+      mode: full
+  endpoint:
+    health:
+      show-details: always
+  endpoints:
+    web:
+      exposure:
+        include:
+          - '*'
+swagger:
+  base-package: org.nutz.demo
+  title: nutz-spring-boot-starter-demo
+  description: nutz-spring-boot-starter-demo swagger 接口手册示例
+  authorization:
+    key-name: Authorization
+spring:
+  servlet:
+    multipart:
+      max-file-size: 10MB
+      max-request-size: 50MB
+  application:
+    name: spring-boot-nutz-starter-demo
+  datasource:
+    druid:
+      url:  jdbc:h2:file:~/.data/nutz-demo;MODE=MYSQL;DATABASE_TO_UPPER=false
+      username: root
+      password: G00dl^ck
+      driver-class-name: org.h2.Driver
+      filters: stat,wall,log4j2
+      initial-size: 10
+      min-idle:  1
+      max-active:  50
+      max-wait:  60000
+      time-between-eviction-runs-millis:  60000
+      min-evictable-idle-time-millis:  300000
+      validation-query:  SELECT '1'
+      test-while-idle:  true
+      test-on-borrow:  true
+      test-on-return:  false
+      pool-prepared-statements:  true
+      max-pool-prepared-statement-per-connection-size: 20
+      web-stat-filter:
+        enabled: true
+        url-pattern: /*
+        exclusions: /druid/*,*.js,*.gif,*.jpg,*.png,*.css,*.ico
+      stat-view-servlet:
+        enabled: true
+        url-pattern: /druid/*
+        reset-enable: true
+  config:
+    location: null
+logging:
+  file:
+    path: ${user.home}/log/
+    name: ${user.home}/log/${spring.application.name}.log
+  level:
+    org.nutz: debug
+    springfox: off
+    io.swagger: off
 nutz:
   json:
     enabled: true
