--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -1,19 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.2.2.RELEASE</version>
-		<relativePath/> <!-- lookup parent from repository -->
+		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutz-spring-boot-starter-demo</artifactId>
 	<name>demo</name>
 	<description>Demo project for Spring Boot with nutz</description>
 
-<repositories>
+	<repositories>
 		<repository>
 			<id>nutz</id>
 			<url>https://jfrog.nutz.cn/artifactory/jcenter</url>
@@ -77,8 +78,8 @@
 			<version>1.1.21</version>
 		</dependency>
 		<dependency>
-			<groupId>com.h2database</groupId>
-			<artifactId>h2</artifactId>
+			<groupId>org.xerial</groupId>
+			<artifactId>sqlite-jdbc</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>com.ibeetl</groupId>
@@ -89,6 +90,12 @@
 			<groupId>club.zhcs</groupId>
 			<artifactId>tiny</artifactId>
 			<version>2.2.2.RELEASE</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.nutz</groupId>
+					<artifactId>nutz</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
