--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -27,11 +27,11 @@ spring:
     name: spring-boot-nutz-starter-demo
   datasource:
     druid:
-      url:  jdbc:h2:file:~/.data/nutz-demo;MODE=MYSQL;DATABASE_TO_UPPER=false
+      url:  jdbc:sqlite::resource:sqlite/demo.db
       username: root
       password: G00dl^ck
-      driver-class-name: org.h2.Driver
-      filters: stat,wall,log4j2
+      driver-class-name: org.sqlite.JDBC
+      filters: stat,log4j2
       initial-size: 10
       min-idle:  1
       max-active:  50
