:white_check_mark: 测试一下 ngrok
1. 添加自动ngrok的测试
2. 修复ngrok自动加载的条件判断

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -64,7 +64,7 @@ logging:
 nutz:
   ngrok:
     port: 8080
-    token: abcdef
+    token: 2lu19cqqf2hciq1hoti37uvjo2
   json:
     enabled: true
     mode: compact
