--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -33,6 +33,7 @@
 	</repositories>
 	<properties>
 		<java.version>1.8</java.version>
+		<nutz.version>1.r.68-SNAPSHOT</nutz.version>
 	</properties>
 
 	<dependencies>
@@ -104,6 +105,17 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-plugins-ngrok</artifactId>
+			<version>${nutz.version}</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 	</dependencies>
 
