:construction: 去除全局的numberformat支持

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -70,7 +70,7 @@ nutz:
     mode: compact
     ignore-null: true
     compact: true
-    date-format: yyyy-MM-dd Hh:mm:ss
+    date-format: yyyy-MM-dd HH:mm:ss
   dao:
     sql-template:
       enable: true
