--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<nutz.version>1.r.68-SNAPSHOT</nutz.version>
+		<nutz.version>[1.r.68.v20191031,)</nutz.version>
 	</properties>
 	<repositories>
 		<repository>
