:construction: 让项目先run起来
1. 做一些配置
2. 增加数据库驱动

Signed-off-by: kerbores <kerbores@gmail.com>

--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -65,7 +65,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jetty</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -82,8 +81,8 @@
 			<version>1.1.21</version>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-devtools</artifactId>
+			<groupId>mysql</groupId>
+			<artifactId>mysql-connector-java</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.xerial</groupId>
