:sparkles: 增加一份完整的demo代碼
Signed-off-by: kerbores <kerbores@gmail.com>

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -19,7 +19,7 @@ nutz:
       add-column: true
       basepackage:
       - club.zhcs.nutz.demo.entity
-      check-index: true
+      check-index: false
       create: true
       delete-column: true
       migration: true
@@ -43,10 +43,14 @@ spring:
     name: nutz-spring-boot-starter-demo
   datasource:
     druid:
-      url: jdbc:mysql://10.0.0.174:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-      username: root
+      #url: jdbc:mysql://10.0.0.174:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      #username: root
+      #password: G00dl^ck
+      #driver-class-name: com.mysql.cj.jdbc.Driver
+      url: jdbc:postgresql://10.0.0.174:5432/thunder
+      username: postgres
       password: G00dl^ck
-      driver-class-name: com.mysql.cj.jdbc.Driver
+      driver-class-name: org.postgresql.Driver
       filters: stat,wall,log4j2
       initial-size: 10
       min-idle:  1
