--- a/pom.xml
+++ b/pom.xml
@@ -5,11 +5,12 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<version>2.3.1.RELEASE</version>
 	</parent>
 	<groupId>org.nutz</groupId>
 	<artifactId>nutz-spring-boot-starter</artifactId>
 	<name>nutz-spring-boot-starter</name>
+	<version>2.3.1.RELEASE.20200624</version>
 	<description>spring boot nutz starter	</description>
 	<url>https://nutzam.com</url>
 	<issueManagement>
