--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.1.RELEASE</version>
+		<version>2.3.2.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
@@ -73,12 +73,12 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.3.1.RELEASE</version>
+			<version>2.3.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.1.21</version>
+			<version>1.1.23</version>
 		</dependency>
 		<dependency>
 			<groupId>mysql</groupId>
@@ -96,7 +96,7 @@
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>tiny</artifactId>
-			<version>2.3.1.RELEASE</version>
+			<version>2.3.2.RELEASE</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.nutz</groupId>
@@ -156,6 +156,7 @@
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>exec-maven-plugin</artifactId>
+				  <version>3.0.0</version><!--$NO-MVN-MAN-VER$-->
 				<executions>
 					<execution>
 						<id>exec-npm-install</id>
