--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -43,7 +43,7 @@ spring:
     name: nutz-spring-boot-starter-demo
   datasource:
     druid:
-      url: jdbc:mysql://172.29.121.10:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://www.emasapple.cn:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
       username: root
       password: G00dl^ck
       driver-class-name: com.mysql.cj.jdbc.Driver
