--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -91,12 +91,12 @@
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.1.3.RELEASE</version>
+			<version>3.2.2.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>tiny</artifactId>
-			<version>2.3.4.RELEASE</version>
+			<version>2.3.4.RELEASE.20201001</version>
 			<exclusions>
 				<exclusion>
 					<groupId>org.nutz</groupId>
