--- a/pom.xml
+++ b/pom.xml
@@ -99,6 +99,11 @@
 		</dependency>
 		<dependency>
 			<groupId>org.nutz</groupId>
+			<artifactId>nutz</artifactId>
+			<version>${nutz.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-ngrok</artifactId>
 			<version>${nutz.version}</version>
 			<scope>provided</scope>
