--- a/pom.xml
+++ b/pom.xml
@@ -39,7 +39,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
-		<nutz.version>1.r.68.v20201205</nutz.version>
+		<nutz.version>1.r.69.20210929</nutz.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -105,13 +105,13 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-ngrok</artifactId>
-			<version>${nutz.version}</version>
+			<version>1.r.68.v20201205</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.3.2.RELEASE</version>
+			<version>3.7.0.RELEASE</version>
 			<optional>true</optional>
 			<scope>provided</scope>
 		</dependency>
@@ -138,7 +138,7 @@
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
-			<version>30.1.1-jre</version>
+			<version>31.0.1-jre</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
