--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -100,6 +100,30 @@
 			<artifactId>tiny</artifactId>
 			<version>2.5.5</version>
 		</dependency>
+
+		<!-- 微信 -->
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>wx-java-mp-spring-boot-starter</artifactId>
+			<version>4.1.9.B</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
+			<version>4.1.9.B</version>
+		</dependency>
+		<dependency>
+			<groupId>com.github.binarywang</groupId>
+			<artifactId>wx-java-open-spring-boot-starter</artifactId>
+			<version>4.1.9.B</version>
+		</dependency>
+
+
+		<dependency>
+		  <groupId>org.nutz</groupId>
+		  <artifactId>nutz-plugins-ngrok</artifactId>
+		  <version>1.r.68.v20201205</version>
+		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
