--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -28,6 +28,7 @@ nutz:
     client:      token: NWZCsotPInP_MjJojBs-4-
       server: ngrok.kerbores.com
       server-port: 4443
+      port: 8080
   json:
     enabled: true
     mode: compact
@@ -116,6 +117,10 @@ axe:
         base-package: tech.riemann.demo.controller.dictionary
         description: 统一数据字典管理模块
         title: 数据字典
+      wechat: 
+        base-package: tech.riemann.demo.controller.wechat
+        description: 微信社会化登录
+        title: 社会化登录
       all: 
         base-package: tech.riemann.demo.controller
     customer:
@@ -136,9 +141,11 @@ wx:  mp:    app-id: wx6e4f32b9bfd64693
     aes-key: 
     secret: 7ec96826e905841e4912e8acdf5037ed
     token: Kerbores
-  miniapp:    appid: 
+  miniapp:    appid: wx6e4f32b9bfd64693
     aes-key: 
-    secret:     
-    token: 
-wechat:  oauth:    mp:      domain: m.poly.ngrok.kerbores.com
+    secret: 7ec96826e905841e4912e8acdf5037ed
+    token: Kerbores
+wechat:  oauth:    mp:      domain: poly.ngrok.kerbores.com
+      router: /wechat/login
     pc:      domain: poly.ngrok.kerbores.com
+      router: /wechat/login/qr
