fix: 升级之后的循环依赖问题
Signed-off-by: Kerbores <kerbores@gmail.com>

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -64,8 +64,8 @@ spring:
   datasource:
 # 数据源
     druid:
-      url: jdbc:mysql://gitea.kerbores.com:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
-      username: developer
+      url: jdbc:mysql://10.100.100.199:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      username: root
       password: G00dl^ck
       driver-class-name: com.mysql.cj.jdbc.Driver
       filters: stat,wall,log4j2
