--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.5.5</version>
+		<version>2.6.2</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
@@ -83,40 +83,45 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.5.5</version>
+			<version>2.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
-			<version>3.7.0.RELEASE</version>
+			<version>3.9.3.RELEASE</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
-			<version>1.2.6</version>
+			<version>1.2.8</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
 			<artifactId>tiny</artifactId>
-			<version>2.5.5</version>
+			<version>2.6.2</version>
 		</dependency>
 
 		<!-- 微信 -->
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-mp-spring-boot-starter</artifactId>
-			<version>4.1.9.B</version>
+			<version>4.2.4.B</version>
 		</dependency>
 		<dependency>
 			<groupId>com.github.binarywang</groupId>
 			<artifactId>wx-java-miniapp-spring-boot-starter</artifactId>
-			<version>4.1.9.B</version>
+			<version>4.2.4.B</version>
 		</dependency>
 
 		<dependency>
-		  <groupId>org.nutz</groupId>
-		  <artifactId>nutz-plugins-ngrok</artifactId>
-		  <version>1.r.68.v20201205</version>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-plugins-ngrok</artifactId>
+			<version>1.r.68.v20201205</version>
+		</dependency>
+		<dependency>
+			<groupId>club.zhcs</groupId>
+			<artifactId>open-api-spring-boot-starter</artifactId>
+			<version>2.6.2</version>
 		</dependency>
 		<dependency>
 			<groupId>org.projectlombok</groupId>
@@ -132,7 +137,7 @@
 		<dependency>
 			<groupId>com.baomidou</groupId>
 			<artifactId>mybatis-plus</artifactId>
-			<version>3.4.3.4</version>
+			<version>3.5.0</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -147,14 +152,9 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>com.fasterxml.jackson.dataformat</groupId>
-			<artifactId>jackson-dataformat-yaml</artifactId>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
 			<groupId>org.apache.maven</groupId>
 			<artifactId>maven-model</artifactId>
-			<version>3.8.2</version>
+			<version>3.8.4</version>
 			<scope>test</scope>
 		</dependency>
 	</dependencies>
