--- a/pom.xml
+++ b/pom.xml
@@ -45,18 +45,7 @@
 	<repositories>
 		<repository>
 			<id>nutz</id>
-			<url>https://jfrog.nutz.cn/artifactory/jcenter</url>
-		</repository>
-		<repository>
-			<id>nutz-snapshots</id>
-			<url>https://jfrog.nutz.cn/artifactory/snapshots</url>
-			<snapshots>
-				<enabled>true</enabled>
-				<updatePolicy>always</updatePolicy>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
+			<url>https://jfrog.nutz.cn/artifactory/public</url>
 		</repository>
 	</repositories>
 	<distributionManagement>
