--- a/demo/src/frontend/pont-config.json
+++ b/demo/src/frontend/pont-config.json
@@ -6,19 +6,7 @@
   "origins": [
     {
       "name": "login",
-      "originUrl": "http://127.0.0.1:8888/v2/api-docs?group=auth"
-    },
-    {
-      "name": "acl",
-      "originUrl": "http://127.0.0.1:8888/v2/api-docs?group=acl"
-    },
-    {
-      "name": "dictionary",
-      "originUrl": "http://127.0.0.1:8888/v2/api-docs?group=dictionary"
-    },
-    {
-      "name": "wechat",
-      "originUrl": "http://127.0.0.1:8888/v2/api-docs?group=wechat"
+      "originUrl": "http://localhost:8080/v2/api-docs?group=acl"
     }
   ]
 }
