--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -60,11 +60,7 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.nutz</groupId>
-			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.6.3</version>
-		</dependency>
+		
 		<dependency>
 			<groupId>com.ibeetl</groupId>
 			<artifactId>beetl</artifactId>
@@ -74,6 +70,11 @@
 			<groupId>com.alibaba</groupId>
 			<artifactId>druid-spring-boot-starter</artifactId>
 			<version>1.2.8</version>
+		</dependency>
+		<dependency>
+			<groupId>org.nutz</groupId>
+			<artifactId>nutz-spring-boot-starter</artifactId>
+			<version>2.6.3</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
@@ -97,6 +98,12 @@
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-plugins-ngrok</artifactId>
 			<version>1.r.68.v20201205</version>
+			<exclusions>
+				<exclusion>
+					<groupId>org.slf4j</groupId>
+					<artifactId>slf4j-log4j12</artifactId>
+				</exclusion>
+			</exclusions>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
