--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -11,7 +11,6 @@ management:
       exposure:
         include:
           - '*'
-# server
 server:
   port: 7777
   http2:
@@ -59,9 +58,9 @@ spring:
   datasource:
 # 数据源
     druid:
-      url: jdbc:mysql://10.100.110.247:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://10.100.130.99:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
       username: thunder
-      password: XPBtRah4YxTKfadA
+      password: AcxZ2THacrx6zRmH
       driver-class-name: com.mysql.cj.jdbc.Driver
       filters: stat,wall,log4j2
       initial-size: 10
@@ -83,7 +82,8 @@ spring:
       stat-view-servlet:
         enabled: true
         url-pattern: /druid/*
-        reset-enable: true# 日志配置
+        reset-enable: true
+# 日志配置
 logging:  
   file: 
     name: ${user.home}/logs/${spring.application.name}.log
@@ -106,7 +106,7 @@ springdoc:
     url: https://www.riemann.tech
     config-url: /v3/api-docs/swagger-config
   server:
-    url: http://localhost:8888
+    url: http://localhost:7777
     description: nutz-spring-boot-starter-demo
   info:
     title: nutz-spring-boot-starter-demo
@@ -130,10 +130,18 @@ springdoc:
     enabled: true
     groups:
       enabled: true
-wx:  miniapp:    appid: wxdd12f1e5067bb20b
-    secret: 526c34f3a2842082abfd36509639335c  mp:    app-id: wx6e4f32b9bfd64693
+wx:
+  miniapp:
+    appid: wxdd12f1e5067bb20b
+    secret: 526c34f3a2842082abfd36509639335c
+  mp:
+    app-id: wx6e4f32b9bfd64693
     secret: 7ec96826e905841e4912e8acdf5037ed
-wechat:  oauth:    mp:      domain: poly.ngrok.kerbores.com
+wechat:
+  oauth:
+    mp:
+      domain: poly.ngrok.kerbores.com
       router: /wechat/login
-    pc:      domain: poly.ngrok.kerbores.com
+    pc:
+      domain: poly.ngrok.kerbores.com
       router: /wechat/login/qr
