upgrade: 升级依赖版本
Signed-off-by: 王贵源 <wangguiyuan@sinosoft.com.cn>

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -99,6 +99,9 @@ axe:
   global:
     exception:
       enabled: true
+      listener:
+        wechat:
+          webhook: https://qyapi.weixin.qq.com/cgi-bin/webhook/send?key=8ca09128-8613-4436-9367-e0dc03a17003
 springdoc:
   customer:
     theme: feeling-blue
