--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -6,7 +6,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.6.7</version>
+		<version>2.6.11</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>org.nutz</groupId>
@@ -16,7 +16,7 @@
 
 	<properties>
 		<java.version>1.8</java.version>
-		<nutz.version>[1.r.68.v20200309,)</nutz.version>
+		<nutz.version> 1.r.69.v20220703</nutz.version>
 	</properties>
 	<repositories>
 		<repository>
@@ -74,7 +74,7 @@
 		<dependency>
 			<groupId>org.nutz</groupId>
 			<artifactId>nutz-spring-boot-starter</artifactId>
-			<version>2.6.7</version>
+			<version>2.6.11</version>
 		</dependency>
 		<dependency>
 			<groupId>club.zhcs</groupId>
