fix: 修复一个泛型获取的问题
Signed-off-by: Kerbores <kerbores@gmail.com>

--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -139,7 +139,7 @@ springdoc:
   group-configs:
   - group: default
     packages-to-scan:
-    - tech.riemann.demo.controller
+    - tech.riemann.nutz.demo.controller
   api-docs:
     enabled: true
     groups:
