--- a/demo/src/main/resources/application.yml
+++ b/demo/src/main/resources/application.yml
@@ -60,7 +60,7 @@ spring:
   datasource:
 # 数据源
     druid:
-      url: jdbc:mysql://mysql.riemann.tech:13306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
+      url: jdbc:mysql://10.100.130.91:3306/thunder?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Shanghai&allowPublicKeyRetrieval=true
       username: thunder
       password: ZhaXcYaabZRKx5zw
       driver-class-name: com.mysql.cj.jdbc.Driver
@@ -131,6 +131,15 @@ springdoc:
   - group: default
     packages-to-scan:
     - tech.riemann.nutz.demo.controller
+  - group: acl
+    packages-to-scan:
+    - tech.riemann.nutz.demo.controller.platform.acl
+  - group: dictionary
+    packages-to-scan:
+    - tech.riemann.nutz.demo.controller.platform.dictionary
+  - group: auth
+    packages-to-scan:
+    - tech.riemann.nutz.demo.controller.platform.auth
   api-docs:
     enabled: true
     groups:
