--- a/demo/src/frontend/.eslintignore
+++ b/demo/src/frontend/.eslintignore
@@ -1,2 +1,32 @@
 src/auto-imports.d.ts
 src/components.d.ts
+pontTemplate.ts
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+lerna-debug.log*
+
+node_modules
+.DS_Store
+dist
+dist-ssr
+coverage
+*.local
+
+/cypress/videos/
+/cypress/screenshots/
+
+# Editor directories and files
+!.vscode/*
+!.vscode/extensions.json
+.idea
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
+
+.mocks/
